# localctl

./: .gitignore  README.md  autostart.bat  pyproject.toml  register-eventsource.ps1
localctl/: cli.py  config.py  manager.py
