[project]
name = "localctl"
version = "0.1.0"
description = "CLI for managing local Node.js / Python apps without a daemon"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Feng" }]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "psutil>=5.9",
    "PyYAML>=6.0",
]

[project.scripts]
localctl = "localctl.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
